# current_calculator

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  caltulate_circuit.cpp  caltulate_circuit.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.rc
images/: logo.xcf
src/: caltulate_circuit.cpp  caltulate_circuit.h  main.cpp  mainwindow.cpp
